[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bughunter_pro"
version = "1.0.0"
description = "Comprehensive security reconnaissance and vulnerability scanner for bug bounty hunters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sri Ramesh Naidu Kusu", email = "mailme@sriramesh.dev"},
]
keywords = ["security", "bug-bounty", "reconnaissance", "vulnerability-scanner", "pentesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.31.0",
    "requests[socks]>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "dnspython>=2.4.0",
    "python-whois>=0.9.4",
    "shodan>=1.31.0",
    "urllib3>=2.0.0",
    "colorama>=0.4.6",
    "jinja2>=3.1.0",
    "tldextract>=5.1.0",
    "PySocks>=1.7.1",
    "stem>=1.8.0",
    "GitPython>=3.1.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "streamlit-agraph>=0.0.45",
    "streamlit-option-menu>=0.3.6",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/SriRameshNaiduKusu/bughunter_pro"
Repository = "https://github.com/SriRameshNaiduKusu/bughunter_pro"
Issues = "https://github.com/SriRameshNaiduKusu/bughunter_pro"

[project.scripts]
bughunter = "bughunter_pro.main:main"
bughunter-install = "bughunter_pro.installer:main"
bughunter-dashboard = "dashboard.app:main"

[tool.setuptools.packages.find]
include = ["bughunter_pro*", "dashboard*"]

[tool.setuptools.package-data]
bughunter_pro = ["wordlists/.gitkeep"]